<resources>
    <string name="app_name">JadwalSholat</string>
    <string name="isyatime">07:00</string>
    <string name="isya">Isya</string>
    <string name="magribtime">magribtime</string>
    <string name="magrib">Magrib</string>
    <string name="ashartime">03:00</string>
    <string name="ashar">Ashar</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
</resources>
