<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:background="@drawable/bg_header_dawn"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/jadwal_sholat"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_tanngal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:fontFamily="monospace"
                    android:text="Tanggal"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:drawablePadding="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="left|bottom"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_nama_daerah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawableLeft="@drawable/ic_location_city_black_24dp"
                    android:text="Gorontalo"
                    android:textColor="@android:color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"

                            >

                            <TableLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/textView"
                                android:layout_margin="10dp">

                                <TableRow android:layout_margin="5dp">

                                    <TextView
                                        android:id="@+id/textView2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_below="@+id/textView"
                                        android:layout_weight="1"
                                        android:text="Subuh" />

                                    <TextView
                                        android:id="@+id/txtSubuh"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="05:00" />

                                    <ImageView
                                        android:id="@+id/img_subuh"
                                        android:src="@drawable/ic_volume_up_black_24dp"

                                        ></ImageView>
                                </TableRow>

                                <TableRow android:layout_margin="5dp">

                                    <TextView
                                        android:id="@+id/tv_zuhur"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/dzuhur" />

                                    <TextView
                                        android:id="@+id/txtDzuhur"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="12:00" />

                                    <ImageView
                                        android:id="@+id/img_zuhur"
                                        android:src="@drawable/ic_volume_up_black_24dp"

                                        ></ImageView>
                                </TableRow>

                                <TableRow android:layout_margin="5dp">

                                    <TextView
                                        android:id="@+id/tv_ashar"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/ashar" />

                                    <TextView
                                        android:id="@+id/txtAshar"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/ashartime" />

                                    <ImageView
                                        android:id="@+id/img_ashar"
                                        android:src="@drawable/ic_volume_up_black_24dp"

                                        />
                                </TableRow>

                                <TableRow android:layout_margin="5dp">

                                    <TextView
                                        android:id="@+id/tv_magrib"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/magrib" />

                                    <TextView
                                        android:id="@+id/txtMaghrib"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/magribtime" />

                                    <ImageView
                                        android:id="@+id/img_magrhib"
                                        android:src="@drawable/ic_volume_up_black_24dp"

                                        ></ImageView>
                                </TableRow>

                                <TableRow android:layout_margin="5dp">

                                    <TextView
                                        android:id="@+id/tv_isya"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/isya" />

                                    <TextView
                                        android:id="@+id/txtIsya"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/isyatime" />

                                    <ImageView
                                        android:id="@+id/img_isya"
                                        android:src="@drawable/ic_volume_up_black_24dp"

                                        ></ImageView>
                                </TableRow>
                            </TableLayout>
                        </androidx.cardview.widget.CardView>










                    </LinearLayout>






                </ScrollView>

            </LinearLayout>


        </LinearLayout>

</RelativeLayout>